client: Fix long report headers on mobile

--- a/client/src/pages/ReportDetails/ReportDetails.scss
+++ b/client/src/pages/ReportDetails/ReportDetails.scss
@@ -5,11 +5,9 @@
   flex-direction: column;
   row-gap: 2rem;
   width: 100%;
-  /* margin: 1rem; */
 
   &__subsection {
     &__title {
-      font-size: 20px;
       font-size: 24px;
       font-weight: bold;
       margin-bottom: 1rem;
