--- a/client/src/pages/ReportDetails/components/ReportHeader/ReportHeader.scss
+++ b/client/src/pages/ReportDetails/components/ReportHeader/ReportHeader.scss
@@ -3,13 +3,14 @@
 .report-header {
   display: flex;
   flex-direction: row;
-  align-items: center;
   column-gap: 1rem;
   margin-left: 0.5rem;
+  align-items: center;
 
   &__name {
     color: $green;
     font-size: 2rem;
+    word-break: break-all;
   }
 
   &__timestamp {
@@ -20,5 +21,17 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+  }
+
+  @media (max-width: $sm) {
+    flex-direction: column;
+
+    &__name {
+      font-size: 1rem;
+    }
+
+    &__timestamp {
+      font-size: 0.5rem;
+    }
   }
 }
